--- a/Cargo.toml
+++ b/Cargo.toml
@@ -22,7 +22,7 @@ path = "src/scratch.rs"
 
 [dependencies]
 anyhow = "1.0.82"
-iroh = { version ="0.16.2", features = [] }
+iroh = { version ="0.17.0", features = [] }
 serde = { version = "1.0.200", features = ["serde_derive"] }
 thiserror = "1.0.59"
 tokio = { version = "1.37.0", features = ["rt-multi-thread", "sync"] }
@@ -33,6 +33,7 @@ futures = "0.3.30"
 futures-util = "0.3.30"
 flexbuffers = "2.0.0"
 async-trait = "0.1.80"
+bytes = "1.6.0"
 
 [build-dependencies]
 uniffi_build = "0.27.1"
